<resources>
    <string name="appName">Restaurant Inspection</string>
    <string name="googleMapsAPIKey" translatable="false">AIzaSyAQidbNN_t7fS5FOSh4SmPtV5QkdCqhrvY</string>
    <string name="restaurantName">Restaurant Name:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="inspection">Inspection</string>
    <string name="longitudeValue">Longitude</string>
    <string name="latitudeValue">Latitude</string>
    <string name="loading" translatable="false">.</string>
    <string name="updatesAvailable">Some updates are available.\nWould you like to download them?</string>
    <string name="downloading">Downloading\nPlease Wait</string>
    <string name="finishDownload">Download Complete</string>
    <string name="downloadFailed">Download Failed</string>
    <string name="finishButton">Finish</string>
    <string name="back">Back</string>
    <string name="loadingMessage">Loading</string>
    <string name="downloadButton">Download</string>
    <string name="cancelButton">Cancel</string>

    <string name="restaurantList">Restaurant List</string>
    <string name="unavailable">unavailable</string>
    <string name="issues"># Issues:</string>
    <string name="recentInspectionDate">Recent Inspection:</string>
    <string name="hazardLevel">Hazard Level:</string>
    <string name="daysAgo">days ago</string>

    <string name="restaurantDetails">Restaurant Details</string>
    <string name="address">Address:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="ifNoInspection">No inspections yet</string>
    <string name="criticalIssues">Critical Issues:</string>
    <string name="nonCriticalIssues">Non-critical Issues:</string>

    <string name="inspectionDetails">Inspection Details</string>
    <string name="date">Date:</string>
    <string name="type">Type:</string>
    <string name="violation">violation</string>
    <string name="violationcode">Code:</string>
    <string name="permit">Permit</string>
    <string name="food">Food</string>
    <string name="foodSafe">Foodsafe</string>
    <string name="pest">Pest</string>
    <string name="hygiene">Hygiene</string>
    <string name="equipment">Equipment</string>
    <string name="critical">Critical</string>
    <string name="notCritical">Not Critical</string>

    <string name="map">Map</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="favourite">Favourites</string>
    <string name="lessOrEqual" translatable="false"><![CDATA[<=]]></string>
    <string name="or">or</string>
    <string name="greaterOrEqual" translatable="false"><![CDATA[>=]]></string>
    <string name="filterBasedOn">Filter based on:</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="clear">clear</string>
    <string name="filter">filter</string>
    <string name="mapSearch">Search</string>
    <string name="dialogueTitle">Your Favourite Restaurants With New Inspections</string>
    <string name="searchHere">Search Here</string>
    <string name="close">Close</string>
    <string name="wasRated">was rated</string>
    <string name="on">on</string>


</resources>
