<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/downloadLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_gravity="center">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/loadingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadingMessage"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/buttonHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="#ffffff">

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/lowCriticalColour"
            android:padding="10dp"
            android:text="@string/downloadButton"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/highCriticalColour"
            android:padding="10dp"
            android:text="@string/cancelButton"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>