<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="157dp"
        android:text="@string/filter_based_on"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="157dp"
        android:text="Favourites"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="119dp"
        android:layout_height="98dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="151dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/lowRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/medRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/highRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:text="@string/hazardLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites" />

    <Button
        android:id="@+id/acceptFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:text="@string/criticalIssues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/greaterOrEqual"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginEnd="34dp"
        android:text="@string/greaterOrEqual"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextGreaterOrEqual"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextGreaterOrEqual"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Bigger than 0"
        android:ems="10"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="199dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="199dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greaterOrEqual" />

    <TextView
        android:id="@+id/lessOrEqual"
        android:layout_width="34sp"
        android:layout_height="35sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:text="@string/lessOrEqual"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextForLessOrEqual"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextForLessOrEqual"
        android:layout_width="186sp"
        android:layout_height="36sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:autofillHints="bigger than 0" />

</androidx.constraintlayout.widget.ConstraintLayout>