<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MapActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />
    <LinearLayout
        android:id="@+id/loadingScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="#000000"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:paddingEnd="50dp"
            android:paddingRight="50dp"
            android:background="#ffffff">

            <TextView
                android:id="@+id/loadingMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadingMessage"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/loading_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loading"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/buttonHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:background="#ffffff">
                <Button
                    android:id="@+id/downloadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#18C021"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:text="@string/downloadButton"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#FF5722"
                    android:padding="10dp"
                    android:text="@string/cancelButton"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>